--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- Encabezado -->
     <header>
+        <img src="images/logo.png" alt="Logo de UpElectronics" width="150">
         <h1>UpElectronics</h1>
         <p>Tu tienda de componentes electrónicos a un clic de distancia</p>
         <nav>
@@ -32,54 +33,62 @@
         <h2>Catálogo de Productos</h2>
 
         <div class="product">
+            <img src="images/microcontrolador.jpg" alt="Microcontrolador" width="150">
             <h3>Microcontroladores</h3>
             <p>Precio: $25,000 COP</p>
             <button onclick="addToCart('Microcontroladores', 25000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/resistencias.jpg" alt="Resistencias y Capacitores" width="150">
             <h3>Resistencias y Capacitores</h3>
             <p>Precio: $2,000 COP</p>
             <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/transistor.jpg" alt="Transistor" width="150">
             <h3>Transistores</h3>
             <p>Precio: $3,000 COP</p>
             <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/led.jpg" alt="Diodo LED" width="150">
             <h3>Diodos LED</h3>
             <p>Precio: $500 COP</p>
             <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/sensor_temperatura.jpg" alt="Sensor de Temperatura" width="150">
             <h3>Sensores de Temperatura</h3>
             <p>Precio: $15,000 COP</p>
             <button onclick="addToCart('Sensores de Temperatura', 15000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/osciloscopio.jpg" alt="Osciloscopio Portátil" width="150">
             <h3>Osciloscopios Portátiles</h3>
             <p>Precio: $350,000 COP</p>
             <button onclick="addToCart('Osciloscopios Portátiles', 350000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/soldadura.jpg" alt="Estación de Soldadura" width="150">
             <h3>Estaciones de Soldadura</h3>
             <p>Precio: $120,000 COP</p>
             <button onclick="addToCart('Estaciones de Soldadura', 120000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
+            <img src="images/fuente_alimentacion.jpg" alt="Fuente de Alimentación" width="150">
             <h3>Fuentes de Alimentación</h3>
             <p>Precio: $80,000 COP</p>
             <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
         </div>
-
-        <!-- Puedes añadir más productos de forma similar -->
+        
+        <!-- Añade más productos según sea necesario -->
     </section>
 
     <!-- Sección de Carrito de Compras -->
