--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Encabezado -->
     <header>
-        <img src="images/logo.png" alt="Logo de UpElectronics" width="150">
+        <img src="logo.png" alt="Logo de UpElectronics" width="150">
         <h1>UpElectronics</h1>
         <p>Tu tienda de componentes electrónicos a un clic de distancia</p>
         <nav>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="product">
-            <img src="images/resistencias.jpg" alt="Resistencias y Capacitores" width="150">
+            <img src="resistencias.jpg" alt="Resistencias y Capacitores" width="150">
             <h3>Resistencias y Capacitores</h3>
             <p>Precio: $2,000 COP</p>
             <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
