--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 </head>
 <body>
     <!-- Encabezado -->
-    <header>
-        <img src="logo.png" alt="Logo de UpElectronics" width="150">
-        <h1>UpElectronics</h1>
-        <p>Tu tienda de componentes electrónicos a un clic de distancia</p>
-        <nav>
+   <!-- Encabezado -->
+<header>
+    <img src="images/logo.png" alt="Logo de UpElectronics" width="150">
+    <h1>UpElectronics</h1>
+    <p>Tu tienda de componentes electrónicos a un clic de distancia</p>
+
+    <!-- Menú desplegable -->
+    <div class="dropdown">
+        <button class="dropbtn">Menú</button>
+        <div class="dropdown-content">
             <a href="#about">Sobre Nosotros</a>
             <a href="#catalog">Catálogo</a>
             <a href="#services">Asesoría</a>
             <a href="#location">Ubicación</a>
             <a href="#contact">Contáctanos</a>
             <a href="#cart">Carrito de Compras</a>
-        </nav>
-    </header>
+        </div>
+    </div>
+</header>
+
 
     <!-- Sección de Sobre Nosotros -->
     <section id="about">
