--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Encabezado -->
    <!-- Encabezado -->
 <header>
-    <img src="images/logo.png" alt="Logo de UpElectronics" width="150">
+    <img src="logo.png" alt="Logo de UpElectronics" width="150">
     <h1>UpElectronics</h1>
     <p>Tu tienda de componentes electrónicos a un clic de distancia</p>
 
@@ -54,42 +54,42 @@
         </div>
 
         <div class="product">
-            <img src="images/transistor.jpg" alt="Transistor" width="150">
+            <img src="transistor.jpg" alt="Transistor" width="150">
             <h3>Transistores</h3>
             <p>Precio: $3,000 COP</p>
             <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
-            <img src="images/led.jpg" alt="Diodo LED" width="150">
+            <img src="led.jpg" alt="Diodo LED" width="150">
             <h3>Diodos LED</h3>
             <p>Precio: $500 COP</p>
             <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
         </div>
 
         <div class="product">
-            <img src="images/sensor_temperatura.jpg" alt="Sensor de Temperatura" width="150">
+            <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura" width="150">
             <h3>Sensores de Temperatura</h3>
             <p>Precio: $15,000 COP</p>
             <button onclick="addToCart('Sensores de Temperatura', 15000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
-            <img src="images/osciloscopio.jpg" alt="Osciloscopio Portátil" width="150">
+            <img src="osciloscopio.jpg" alt="Osciloscopio Portátil" width="150">
             <h3>Osciloscopios Portátiles</h3>
             <p>Precio: $350,000 COP</p>
             <button onclick="addToCart('Osciloscopios Portátiles', 350000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
-            <img src="images/soldadura.jpg" alt="Estación de Soldadura" width="150">
+            <img src="soldadura.jpg" alt="Estación de Soldadura" width="150">
             <h3>Estaciones de Soldadura</h3>
             <p>Precio: $120,000 COP</p>
             <button onclick="addToCart('Estaciones de Soldadura', 120000)">Añadir al carrito</button>
         </div>
 
         <div class="product">
-            <img src="images/fuente_alimentacion.jpg" alt="Fuente de Alimentación" width="150">
+            <img src="fuente_alimentacion.jpg" alt="Fuente de Alimentación" width="150">
             <h3>Fuentes de Alimentación</h3>
             <p>Precio: $80,000 COP</p>
             <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
