--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="product">
-            <img src="transistor.jpg" alt="Transistor" width="150">
+            <img src="transistor.jfif" alt="Transistor" width="150">
             <h3>Transistores</h3>
             <p>Precio: $3,000 COP</p>
             <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
