--- a/index.html
+++ b/index.html
@@ -5,112 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UpElectronics - Tienda de Componentes Electrónicos</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Encabezado -->
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="Logo de UpElectronics" width="150">
+        <div class="container header-container">
+            <div class="logo">
+                <img src="logo.png" alt="Logo de UpElectronics">
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#about">Sobre Nosotros</a></li>
+                    <li><a href="#catalog">Catálogo</a></li>
+                    <li><a href="#services">Asesoría</a></li>
+                    <li><a href="#location">Ubicación</a></li>
+                    <li><a href="#contact">Contáctanos</a></li>
+                    <li><a href="#cart">Carrito</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <a href="#about">Sobre Nosotros</a>
-            <a href="#catalog">Catálogo</a>
-            <a href="#services">Asesoría</a>
-            <a href="#location">Ubicación</a>
-            <a href="#contact">Contáctanos</a>
-            <a href="#cart">Carrito</a>
-        </nav>
     </header>
 
     <!-- Sección de Sobre Nosotros -->
     <section id="about" class="content-section">
-        <h2>Sobre Nosotros</h2>
-        <p>UpElectronics es una tienda especializada en la venta de componentes electrónicos para estudiantes y entusiastas de la tecnología. Nuestra misión es facilitar el acceso a componentes de difícil acceso en la región.</p>
+        <div class="container">
+            <h2>Sobre Nosotros</h2>
+            <p>En UpElectronics, ofrecemos componentes electrónicos de calidad para estudiantes, entusiastas y profesionales de la tecnología. Nuestro objetivo es facilitar el acceso a productos de difícil obtención en la región.</p>
+        </div>
     </section>
 
     <!-- Sección de Catálogo -->
     <section id="catalog" class="content-section">
-        <h2>Catálogo de Productos</h2>
+        <div class="container">
+            <h2>Catálogo de Productos</h2>
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="microcontrolador.jpg" alt="Microcontrolador">
+                    <h3>Microcontroladores</h3>
+                    <p class="price">$25,000 COP</p>
+                    <button onclick="addToCart('Microcontroladores', 25000)">Añadir al carrito</button>
+                </div>
 
-        <div class="product">
-            <img src="microcontrolador.jpg" alt="Microcontrolador" class="product-image">
-            <h3>Microcontroladores</h3>
-            <p>Precio: $25,000 COP</p>
-            <button onclick="addToCart('Microcontroladores', 25000)">Añadir al carrito</button>
-        </div>
+                <div class="product-card">
+                    <img src="resistencias.jpg" alt="Resistencias y Capacitores">
+                    <h3>Resistencias y Capacitores</h3>
+                    <p class="price">$2,000 COP</p>
+                    <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
+                </div>
 
-        <div class="product">
-            <img src="resistencias.jpg" alt="Resistencias y Capacitores" class="product-image">
-            <h3>Resistencias y Capacitores</h3>
-            <p>Precio: $2,000 COP</p>
-            <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
-        </div>
+                <div class="product-card">
+                    <img src="transistor.jpg" alt="Transistor">
+                    <h3>Transistores</h3>
+                    <p class="price">$3,000 COP</p>
+                    <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
+                </div>
 
-        <div class="product">
-            <img src="transistor.jpg" alt="Transistor" class="product-image">
-            <h3>Transistores</h3>
-            <p>Precio: $3,000 COP</p>
-            <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
-        </div>
+                <div class="product-card">
+                    <img src="led.jpg" alt="Diodo LED">
+                    <h3>Diodos LED</h3>
+                    <p class="price">$500 COP</p>
+                    <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
+                </div>
 
-        <div class="product">
-            <img src="led.jpg" alt="Diodo LED" class="product-image">
-            <h3>Diodos LED</h3>
-            <p>Precio: $500 COP</p>
-            <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
-        </div>
-
-        <div class="product">
-            <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura" class="product-image">
-            <h3>Sensores de Temperatura</h3>
-            <p>Precio: $15,000 COP</p>
-            <button onclick="addToCart('Sensores de Temperatura', 15000)">Añadir al carrito</button>
-        </div>
-
-        <div class="product">
-            <img src="osciloscopio.jpg" alt="Osciloscopio Portátil" class="product-image">
-            <h3>Osciloscopios Portátiles</h3>
-            <p>Precio: $350,000 COP</p>
-            <button onclick="addToCart('Osciloscopios Portátiles', 350000)">Añadir al carrito</button>
-        </div>
-
-        <div class="product">
-            <img src="soldadura.jpg" alt="Estación de Soldadura" class="product-image">
-            <h3>Estaciones de Soldadura</h3>
-            <p>Precio: $120,000 COP</p>
-            <button onclick="addToCart('Estaciones de Soldadura', 120000)">Añadir al carrito</button>
-        </div>
-
-        <div class="product">
-            <img src="fuente_alimentacion.jpg" alt="Fuente de Alimentación" class="product-image">
-            <h3>Fuentes de Alimentación</h3>
-            <p>Precio: $80,000 COP</p>
-            <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
+                <!-- Más productos se pueden añadir de la misma manera -->
+            </div>
         </div>
     </section>
 
     <!-- Sección de Contacto -->
     <section id="contact" class="content-section">
-        <h2>Contáctanos</h2>
-        <form>
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" required>
+        <div class="container">
+            <h2>Contáctanos</h2>
+            <form>
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" required>
 
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" required>
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" required>
 
-            <label for="message">Mensaje:</label>
-            <textarea id="message" required></textarea>
+                <label for="message">Mensaje:</label>
+                <textarea id="message" required></textarea>
 
-            <button type="submit">Enviar</button>
-        </form>
-        <p>Teléfono: (+57) 3153429495</p>
-        <p>Email: contacto@upelectronics.com</p>
+                <button type="submit">Enviar</button>
+            </form>
+            <p>Teléfono: (+57) 3153429495</p>
+            <p>Email: contacto@upelectronics.com</p>
+        </div>
     </section>
 
     <!-- Pie de página -->
     <footer>
-        <p>&copy; 2024 UpElectronics. Todos los derechos reservados.</p>
+        <div class="container footer-container">
+            <p>&copy; 2024 UpElectronics. Todos los derechos reservados.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
