--- a/index.html
+++ b/index.html
@@ -3,143 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UpElectronics - Tienda de Componentes Electrónicos</title>
+    <title>UpElectronics - Innovación en Electrónica</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Encabezado -->
-    <header>
-        <img src="logo.png" alt="UpElectronics Logo" class="logo">
-        <nav>
-            <a href="#about">Sobre Nosotros</a>
-            <a href="#catalog">Catálogo</a>
-            <a href="#services">Asesoría</a>
-            <a href="#location">Ubicación</a>
-            <a href="#contact">Contáctanos</a>
-            <a href="#cart"><img src="cart-icon.png" alt="Carrito"></a>
-            <a href="#account"><img src="user-icon.png" alt="Usuario"></a>
-        </nav>
-    </header>
-
-    <!-- Sección de Sobre Nosotros -->
-    <section id="about">
-        <h2>Sobre Nosotros</h2>
-        <p>UpElectronics es una tienda especializada en la venta de componentes electrónicos para estudiantes y entusiastas de la tecnología. Nuestra misión es facilitar el acceso a componentes de difícil acceso en la región.</p>
+    <!-- Hero Section con Parallax -->
+    <section id="hero">
+        <div class="hero-content">
+            <h1>UpElectronics</h1>
+            <p>Todo lo que necesitas para tus proyectos electrónicos, a un solo clic</p>
+            <a href="#catalog" class="btn-primary">Explora el Catálogo</a>
+        </div>
     </section>
 
-    <!-- Sección de Catálogo -->
+    <!-- Sección de Categorías Destacadas -->
+    <section id="categories">
+        <h2>Categorías Populares</h2>
+        <div class="category-grid">
+            <div class="category-card">
+                <img src="microcontroladores.jpg" alt="Microcontroladores">
+                <h3>Microcontroladores</h3>
+            </div>
+            <div class="category-card">
+                <img src="resistencias-capacitores.jpg" alt="Resistencias y Capacitores">
+                <h3>Resistencias y Capacitores</h3>
+            </div>
+            <div class="category-card">
+                <img src="transistores.jpg" alt="Transistores">
+                <h3>Transistores</h3>
+            </div>
+            <div class="category-card">
+                <img src="diodos-led.jpg" alt="Diodos LED">
+                <h3>Diodos LED</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Catálogo de Productos -->
     <section id="catalog">
         <h2>Catálogo de Productos</h2>
-
-        <!-- Categoría Microcontroladores -->
-        <div class="product-category">
-            <h3>Microcontroladores</h3>
-            <div class="product">
-                <h4>ATmega328P</h4>
+        <div class="product-grid">
+            <!-- Productos -->
+            <div class="product-card">
+                <h4>Microcontrolador ATmega328P</h4>
+                <img src="microcontrolador.jpg" alt="Microcontrolador ">
                 <p>Precio: $25,000 COP</p>
-                <button onclick="addToCart('ATmega328P', 25000)">Añadir al carrito</button>
+                <button onclick="addToCart('Microcontrolador ', 25000)">Añadir al carrito</button>
             </div>
-            <div class="product">
-                <h4>ESP8266</h4>
-                <p>Precio: $30,000 COP</p>
-                <button onclick="addToCart('ESP8266', 30000)">Añadir al carrito</button>
-            </div>
-            <div class="product">
-                <h4>Arduino Uno R3</h4>
-                <p>Precio: $40,000 COP</p>
-                <button onclick="addToCart('Arduino Uno R3', 40000)">Añadir al carrito</button>
-            </div>
-        </div>
-
-        <!-- Categoría Componentes Pasivos -->
-        <div class="product-category">
-            <h3>Componentes Pasivos</h3>
-            <div class="product">
-                <h4>Resistencias 1K Ohm</h4>
+            <div class="product-card">
+                <h4>Resistencias y Capacitores</h4>
+                <img src="resistencias.jpg" alt="Resistencias y Capacitores">
                 <p>Precio: $2,000 COP</p>
-                <button onclick="addToCart('Resistencias 1K Ohm', 2000)">Añadir al carrito</button>
+                <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
             </div>
-            <div class="product">
-                <h4>Capacitores 100uF</h4>
-                <p>Precio: $1,500 COP</p>
-                <button onclick="addToCart('Capacitores 100uF', 1500)">Añadir al carrito</button>
-            </div>
-            <div class="product">
-                <h4>Bobina 10uH</h4>
+            <div class="product-card">
+                <h4>Transistores</h4>
+                <img src="transistor.jfif" alt="Transistores">
                 <p>Precio: $3,000 COP</p>
-                <button onclick="addToCart('Bobina 10uH', 3000)">Añadir al carrito</button>
+                <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
             </div>
-        </div>
-
-        <!-- Categoría Sensores -->
-        <div class="product-category">
-            <h3>Sensores</h3>
-            <div class="product">
-                <h4>Sensor de Temperatura LM35</h4>
+            <div class="product-card">
+                <h4>Diodos LED</h4>
+                <img src="led.jpg" alt="Diodos LED">
+                <p>Precio: $500 COP</p>
+                <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Sensor de Temperatura</h4>
+                <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura">
                 <p>Precio: $15,000 COP</p>
-                <button onclick="addToCart('Sensor de Temperatura LM35', 15000)">Añadir al carrito</button>
+                <button onclick="addToCart('Sensor de Temperatura', 15000)">Añadir al carrito</button>
             </div>
-            <div class="product">
-                <h4>Sensor Ultrasónico HC-SR04</h4>
-                <p>Precio: $18,000 COP</p>
-                <button onclick="addToCart('Sensor Ultrasónico HC-SR04', 18000)">Añadir al carrito</button>
+            <div class="product-card">
+                <h4>Osciloscopio Portátil</h4>
+                <img src="osciloscopio.jpg" alt="Osciloscopio Portátil">
+                <p>Precio: $350,000 COP</p>
+                <button onclick="addToCart('Osciloscopio Portátil', 350000)">Añadir al carrito</button>
             </div>
-            <div class="product">
-                <h4>Sensor de Gas MQ-2</h4>
-                <p>Precio: $20,000 COP</p>
-                <button onclick="addToCart('Sensor de Gas MQ-2', 20000)">Añadir al carrito</button>
-            </div>
-        </div>
-
-        <!-- Categoría Herramientas -->
-        <div class="product-category">
-            <h3>Herramientas</h3>
-            <div class="product">
-                <h4>Multímetro Digital</h4>
-                <p>Precio: $80,000 COP</p>
-                <button onclick="addToCart('Multímetro Digital', 80000)">Añadir al carrito</button>
-            </div>
-            <div class="product">
+            <div class="product-card">
                 <h4>Estación de Soldadura</h4>
+                <img src="soldadura.jpg" alt="Estación de Soldadura">
                 <p>Precio: $120,000 COP</p>
                 <button onclick="addToCart('Estación de Soldadura', 120000)">Añadir al carrito</button>
             </div>
-            <div class="product">
-                <h4>Pinzas Antiestáticas</h4>
-                <p>Precio: $10,000 COP</p>
-                <button onclick="addToCart('Pinzas Antiestáticas', 10000)">Añadir al carrito</button>
+            <div class="product-card">
+                <h4>Fuentes de Alimentación</h4>
+                <img src="fuente_alimentacion.jpg" alt="Fuentes de Alimentación">
+                <p>Precio: $80,000 COP</p>
+                <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
             </div>
         </div>
     </section>
 
-    <!-- Sección de Carrito de Compras -->
-    <section id="cart">
-        <h2>Carrito de Compras</h2>
-        <ul id="cartItems"></ul>
-        <p id="totalPrice">Total: $0 COP</p>
-        <button onclick="clearCart()">Vaciar Carrito</button>
+    <!-- Carrito Modal -->
+    <section id="cart-modal" class="modal">
+        <div class="modal-content">
+            <h2>Carrito de Compras</h2>
+            <ul id="cartItems"></ul>
+            <p id="totalPrice">Total: $0 COP</p>
+            <button onclick="clearCart()" class="btn-secondary">Vaciar Carrito</button>
+            <button class="btn-primary" onclick="closeCart()">Cerrar</button>
+        </div>
     </section>
 
-    <!-- Sección de Contacto -->
-    <section id="contact">
-        <h2>Contáctanos</h2>
-        <form>
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" required>
-
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" required>
-
-            <label for="message">Mensaje:</label>
-            <textarea id="message" required></textarea>
-
-            <button type="submit">Enviar</button>
-        </form>
-        <p>Teléfono: (+57) 3153429495</p>
-        <p>Email: contacto@upelectronics.com</p>
-    </section>
-
-    <!-- Pie de página -->
     <footer>
         <p>&copy; 2024 UpElectronics. Todos los derechos reservados.</p>
     </footer>
