--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <h3>Microcontroladores</h3>
             </div>
             <div class="category-card">
-                <img src="resistencias-capacitores.jpg" alt="Resistencias y Capacitores">
+                <img src="resistencias.jpg" alt="Resistencias y Capacitores">
                 <h3>Resistencias y Capacitores</h3>
             </div>
             <div class="category-card">
-                <img src="transistores.jpg" alt="Transistores">
+                <img src="transistor.jfif" alt="Transistores">
                 <h3>Transistores</h3>
             </div>
             <div class="category-card">
-                <img src="diodos-led.jpg" alt="Diodos LED">
+                <img src="led.jpg" alt="Diodos LED">
                 <h3>Diodos LED</h3>
             </div>
         </div>
