--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Encabezado con Logo -->
     <header>
         <div class="header-content">
-            <img src="logo-upelectronics.png" alt="UpElectronics Logo" class="logo">
+            <img src="logo.png" alt="UpElectronics Logo" class="logo">
             <nav>
                 <a href="#about">Sobre Nosotros</a>
                 <a href="#catalog">Catálogo</a>
@@ -41,15 +41,15 @@
                 <h3>Microcontroladores</h3>
             </div>
             <div class="category-card">
-                <img src="resistencias-capacitores.jpg" alt="Resistencias y Capacitores">
+                <img src="resistencias.jpg" alt="Resistencias y Capacitores">
                 <h3>Resistencias y Capacitores</h3>
             </div>
             <div class="category-card">
-                <img src="transistores.jpg" alt="Transistores">
+                <img src="transistor.jpg" alt="Transistores">
                 <h3>Transistores</h3>
             </div>
             <div class="category-card">
-                <img src="diodos-led.jpg" alt="Diodos LED">
+                <img src="led.jpg" alt="Diodos LED">
                 <h3>Diodos LED</h3>
             </div>
         </div>
@@ -62,31 +62,31 @@
             <!-- Productos -->
             <div class="product-card">
                 <h4>Microcontrolador ATmega328P</h4>
-                <img src="atmega328p.jpg" alt="Microcontrolador ATmega328P">
+                <img src="microcontroladores.jpg" alt="Microcontrolador ATmega328P">
                 <p>Precio: $25,000 COP</p>
                 <button onclick="addToCart('Microcontrolador ATmega328P', 25000)">Añadir al carrito</button>
             </div>
             <div class="product-card">
                 <h4>Resistencias y Capacitores</h4>
-                <img src="resistencias-capacitores.jpg" alt="Resistencias y Capacitores">
+                <img src="resistencias.jpg" alt="Resistencias y Capacitores">
                 <p>Precio: $2,000 COP</p>
                 <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
             </div>
             <div class="product-card">
                 <h4>Transistores</h4>
-                <img src="transistores.jpg" alt="Transistores">
+                <img src="transistor.jpg" alt="Transistores">
                 <p>Precio: $3,000 COP</p>
                 <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
             </div>
             <div class="product-card">
                 <h4>Diodos LED</h4>
-                <img src="diodos-led.jpg" alt="Diodos LED">
+                <img src="led.jpg" alt="Diodos LED">
                 <p>Precio: $500 COP</p>
                 <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
             </div>
             <div class="product-card">
                 <h4>Sensor de Temperatura</h4>
-                <img src="sensor-temperatura.jpg" alt="Sensor de Temperatura">
+                <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura">
                 <p>Precio: $15,000 COP</p>
                 <button onclick="addToCart('Sensor de Temperatura', 15000)">Añadir al carrito</button>
             </div>
@@ -98,13 +98,13 @@
             </div>
             <div class="product-card">
                 <h4>Estación de Soldadura</h4>
-                <img src="estacion-soldadura.jpg" alt="Estación de Soldadura">
+                <img src="soldadura.jpg" alt="Estación de Soldadura">
                 <p>Precio: $120,000 COP</p>
                 <button onclick="addToCart('Estación de Soldadura', 120000)">Añadir al carrito</button>
             </div>
             <div class="product-card">
                 <h4>Fuentes de Alimentación</h4>
-                <img src="fuentes-alimentacion.jpg" alt="Fuentes de Alimentación">
+                <img src="fuente_alimentacion.jpg" alt="Fuentes de Alimentación">
                 <p>Precio: $80,000 COP</p>
                 <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
             </div>
