--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Encabezado con Logo -->
+    <!-- Encabezado Moderno con Logo e Iconos -->
     <header>
         <div class="header-content">
-            <img src="logo.png" alt="UpElectronics Logo" class="logo">
-            <nav>
+            <img src="logo-upelectronics.png" alt="UpElectronics Logo" class="logo">
+            <nav class="desktop-menu">
                 <a href="#about">Sobre Nosotros</a>
                 <a href="#catalog">Catálogo</a>
                 <a href="#services">Asesoría</a>
@@ -20,7 +20,17 @@
                 <a href="#cart"><img src="cart-icon.png" alt="Carrito"></a>
                 <a href="#account"><img src="user-icon.png" alt="Usuario"></a>
             </nav>
+            <div class="mobile-menu-icon" onclick="toggleMenu()">☰</div>
         </div>
+        <nav class="mobile-menu">
+            <a href="#about">Sobre Nosotros</a>
+            <a href="#catalog">Catálogo</a>
+            <a href="#services">Asesoría</a>
+            <a href="#location">Ubicación</a>
+            <a href="#contact">Contáctanos</a>
+            <a href="#cart">Carrito</a>
+            <a href="#account">Usuario</a>
+        </nav>
     </header>
 
     <!-- Hero Section con Parallax -->
@@ -32,29 +42,6 @@
         </div>
     </section>
 
-    <!-- Sección de Categorías Destacadas -->
-    <section id="categories">
-        <h2>Categorías Populares</h2>
-        <div class="category-grid">
-            <div class="category-card">
-                <img src="microcontroladores.jpg" alt="Microcontroladores">
-                <h3>Microcontroladores</h3>
-            </div>
-            <div class="category-card">
-                <img src="resistencias.jpg" alt="Resistencias y Capacitores">
-                <h3>Resistencias y Capacitores</h3>
-            </div>
-            <div class="category-card">
-                <img src="transistor.jpg" alt="Transistores">
-                <h3>Transistores</h3>
-            </div>
-            <div class="category-card">
-                <img src="led.jpg" alt="Diodos LED">
-                <h3>Diodos LED</h3>
-            </div>
-        </div>
-    </section>
-
     <!-- Catálogo de Productos -->
     <section id="catalog">
         <h2>Catálogo de Productos</h2>
@@ -62,52 +49,11 @@
             <!-- Productos -->
             <div class="product-card">
                 <h4>Microcontrolador ATmega328P</h4>
-                <img src="microcontroladores.jpg" alt="Microcontrolador ATmega328P">
+                <img src="atmega328p.jpg" alt="Microcontrolador ATmega328P">
                 <p>Precio: $25,000 COP</p>
                 <button onclick="addToCart('Microcontrolador ATmega328P', 25000)">Añadir al carrito</button>
             </div>
-            <div class="product-card">
-                <h4>Resistencias y Capacitores</h4>
-                <img src="resistencias.jpg" alt="Resistencias y Capacitores">
-                <p>Precio: $2,000 COP</p>
-                <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
-            </div>
-            <div class="product-card">
-                <h4>Transistores</h4>
-                <img src="transistor.jpg" alt="Transistores">
-                <p>Precio: $3,000 COP</p>
-                <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
-            </div>
-            <div class="product-card">
-                <h4>Diodos LED</h4>
-                <img src="led.jpg" alt="Diodos LED">
-                <p>Precio: $500 COP</p>
-                <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
-            </div>
-            <div class="product-card">
-                <h4>Sensor de Temperatura</h4>
-                <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura">
-                <p>Precio: $15,000 COP</p>
-                <button onclick="addToCart('Sensor de Temperatura', 15000)">Añadir al carrito</button>
-            </div>
-            <div class="product-card">
-                <h4>Osciloscopio Portátil</h4>
-                <img src="osciloscopio.jpg" alt="Osciloscopio Portátil">
-                <p>Precio: $350,000 COP</p>
-                <button onclick="addToCart('Osciloscopio Portátil', 350000)">Añadir al carrito</button>
-            </div>
-            <div class="product-card">
-                <h4>Estación de Soldadura</h4>
-                <img src="soldadura.jpg" alt="Estación de Soldadura">
-                <p>Precio: $120,000 COP</p>
-                <button onclick="addToCart('Estación de Soldadura', 120000)">Añadir al carrito</button>
-            </div>
-            <div class="product-card">
-                <h4>Fuentes de Alimentación</h4>
-                <img src="fuente_alimentacion.jpg" alt="Fuentes de Alimentación">
-                <p>Precio: $80,000 COP</p>
-                <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
-            </div>
+            <!-- Agrega más productos aquí -->
         </div>
     </section>
 
