--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
         </div>
     </section>
 
+    <!-- Sección de Categorías Populares -->
+    <section id="categories">
+        <h2>Categorías Populares</h2>
+        <div class="category-grid">
+            <div class="category-card">
+                <img src="microcontroladores.jpg" alt="Microcontroladores">
+                <h3>Microcontroladores</h3>
+            </div>
+            <div class="category-card">
+                <img src="resistencias-capacitores.jpg" alt="Resistencias y Capacitores">
+                <h3>Resistencias y Capacitores</h3>
+            </div>
+            <div class="category-card">
+                <img src="transistores.jpg" alt="Transistores">
+                <h3>Transistores</h3>
+            </div>
+            <div class="category-card">
+                <img src="diodos-led.jpg" alt="Diodos LED">
+                <h3>Diodos LED</h3>
+            </div>
+        </div>
+    </section>
+
     <!-- Catálogo de Productos -->
     <section id="catalog">
         <h2>Catálogo de Productos</h2>
@@ -53,7 +76,48 @@
                 <p>Precio: $25,000 COP</p>
                 <button onclick="addToCart('Microcontrolador ATmega328P', 25000)">Añadir al carrito</button>
             </div>
-            <!-- Agrega más productos aquí -->
+            <div class="product-card">
+                <h4>Resistencias y Capacitores</h4>
+                <img src="resistencias-capacitores.jpg" alt="Resistencias y Capacitores">
+                <p>Precio: $2,000 COP</p>
+                <button onclick="addToCart('Resistencias y Capacitores', 2000)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Transistores</h4>
+                <img src="transistores.jpg" alt="Transistores">
+                <p>Precio: $3,000 COP</p>
+                <button onclick="addToCart('Transistores', 3000)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Diodos LED</h4>
+                <img src="diodos-led.jpg" alt="Diodos LED">
+                <p>Precio: $500 COP</p>
+                <button onclick="addToCart('Diodos LED', 500)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Sensor de Temperatura</h4>
+                <img src="sensor-temperatura.jpg" alt="Sensor de Temperatura">
+                <p>Precio: $15,000 COP</p>
+                <button onclick="addToCart('Sensor de Temperatura', 15000)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Osciloscopio Portátil</h4>
+                <img src="osciloscopio.jpg" alt="Osciloscopio Portátil">
+                <p>Precio: $350,000 COP</p>
+                <button onclick="addToCart('Osciloscopio Portátil', 350000)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Estación de Soldadura</h4>
+                <img src="estacion-soldadura.jpg" alt="Estación de Soldadura">
+                <p>Precio: $120,000 COP</p>
+                <button onclick="addToCart('Estación de Soldadura', 120000)">Añadir al carrito</button>
+            </div>
+            <div class="product-card">
+                <h4>Fuentes de Alimentación</h4>
+                <img src="fuentes-alimentacion.jpg" alt="Fuentes de Alimentación">
+                <p>Precio: $80,000 COP</p>
+                <button onclick="addToCart('Fuentes de Alimentación', 80000)">Añadir al carrito</button>
+            </div>
         </div>
     </section>
 
