--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="product-grid">
             <!-- Microcontroladores -->
             <div class="product-card">
-                <img src="microcontroladores.jpg" alt="Microcontrolador">
+                <img src="microcontrolador.jpg" alt="Microcontrolador">
                 <h3>Microcontrolador</h3>
                 <p>$15.99</p>
                 <button>Agregar al carrito</button>
