--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="icons">
-            <a href="#"><img src="search-icon.png" alt="Buscar"></a>
+            <a href="#"><i class="fas fa-search"></i></a>
             <a href="#" class="cart-icon">🛒</a>
         </div>
     </header>
